--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,13 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+span {
+  padding: 10px;
+  background-color: #666;
+  font-size: 20px;
+  color: #fff;
+  line-height: 60px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
