--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,20 @@
   height: 40vmin;
   pointer-events: none;
 }
+.navbar {
+  text-align: right;
+}
+.navbar li {
+  display: inline-block;
+  padding: 10px 5px;
+}
+.nav-bar-link {
+  color: black;
+  text-decoration: none;
+}
+.nav-bar-link:hover {
+  color: green;
+}
 span {
   padding: 10px;
   background-color: #666;
