Active Link in React Router v6

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
 .navbar {
   text-align: right;
 }
+/* .navbar .active {
+  color: skyblue;
+} */
 .navbar li {
   display: inline-block;
   padding: 10px 5px;
